<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daniel_catlett.noassemblyrequireddanielc.Patio">

    <RelativeLayout
        android:id="@+id/activity_ikea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.daniel_catlett.noassemblyrequireddanielc.Ikea">

        <ImageView
            app:srcCompat="@drawable/patio"
            android:id="@+id/dresser"
            android:layout_height="150sp"
            android:layout_width="200sp"
            android:layout_below="@+id/txtTitle2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtSubtitle"
            android:textSize="25sp"
            android:layout_below="@+id/dresser"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/txtItem12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtItem2"
            android:layout_alignLeft="@+id/txtItem2"
            android:layout_alignStart="@+id/txtItem2"
            android:layout_marginTop="10dp"
            android:id="@+id/textView6" />

        <TextView
            android:text="@string/txtItem6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/txtItem5"
            android:layout_below="@+id/txtItem4"
            android:layout_alignLeft="@+id/txtItem4"
            android:layout_alignStart="@+id/txtItem4" />

        <TextView
            android:text="@string/txtItem14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtItem6"
            android:layout_below="@+id/txtItem5"
            android:layout_alignLeft="@+id/txtItem5"
            android:layout_alignStart="@+id/txtItem5" />

        <TextView
            android:text="@string/txtItem13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/txtItem4"
            android:layout_below="@+id/textView6"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:text="@string/txtItem11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:id="@+id/txtItem2"
            android:layout_below="@+id/txtItem1"
            android:layout_alignLeft="@+id/txtItem1"
            android:layout_alignStart="@+id/txtItem1" />

        <TextView
            android:text="@string/txtTitle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/txtTitle2"
            android:textSize="38sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/txtItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/txtItem1"
            android:layout_below="@+id/txtSubtitle"
            android:layout_alignLeft="@+id/dresser"
            android:layout_alignStart="@+id/dresser" />

    </RelativeLayout>

</RelativeLayout>
